Fixes for schema and comment about how to use generate-language-activation

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_alias_ui(ai_lab_config, \"ai-lab-default-custom\"))"
+    "display(get_alias_ui(ai_lab_config, \"ai_lab_default_custom\"))"
    ]
   },
   {
@@ -240,13 +240,7 @@
    "id": "679730d4-820c-4547-8098-9885818cb4e8",
    "metadata": {},
    "source": [
-    "This command also stores the activation statement in the ai-lab-config. You can verify it with:\n",
-    "\n",
-    "You could get the activation SLQ command on the command line with `exaslct` by running:\n",
-    "```\n",
-    "cd <slc_dir>\n",
-    "./exaslct generate-language-activation --flavor-path flavors/<flavor_path> --bucketfs-name <bucketfs_name> --bucket-name <bucket_name> --container-name <container_name> --path-in-bucket <path_in_bucket>\n",
-    "```"
+    "This command also stores the activation statement in the ai-lab-config. You can verify it with:\n"
    ]
   },
   {
@@ -264,7 +258,13 @@
    "id": "8797d3e3-a43e-4250-a5f0-50fb04aa1514",
    "metadata": {},
    "source": [
-    "The syntax of the activation statement is: `alias=url`. The activation key will be used in the `ALTER_SESSION` or `ALTER_SYSTEM` commands to \"register\" the script-language-container for usage in the UDF's."
+    "The syntax of the activation statement is: `alias=url`. The activation key will be used in the `ALTER_SESSION` or `ALTER_SYSTEM` commands to \"register\" the script-language-container for usage in the UDF's.\n",
+    "\n",
+    "You could get the activation SLQ command on the command line with `exaslct` by running:\n",
+    "```\n",
+    "cd <slc_dir>\n",
+    "./exaslct generate-language-activation --flavor-path flavors/<flavor_path> --bucketfs-name <bucketfs_name> --bucket-name <bucket_name> --container-name <container_name> --path-in-bucket <path_in_bucket>\n",
+    "```"
    ]
   },
   {
