--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
@@ -76,8 +76,7 @@
    "source": [
     "from exasol.nb_connector.language_container_activation import open_pyexasol_connection_with_lang_definitions\n",
     "\n",
-    "conn = open_pyexasol_connection_with_lang_definitions(ai_lab_config, schema=ai_lab_config.get(CKey.db_schema), compression=True)\n",
-    "conn.execute(\"CREATE SCHEMA SLC_TUTORIAL\")"
+    "conn = open_pyexasol_connection_with_lang_definitions(ai_lab_config, schema=ai_lab_config.db_schema, compression=True)"
    ]
   },
   {
