#304 Addressed issues found in the review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_flights.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_flights.ipynb
@@ -3,13 +3,19 @@
   {
    "cell_type": "markdown",
    "id": "3e21b55a-32e5-47bf-a226-1a56a72e4699",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# US Flights\n",
     "\n",
     "In this notebook we will load a dataset with information about US Flights. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation. We will load a selection of this data stored in a AWS cloudfront.\n",
     "\n",
-    "To execute queries and upload data to Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -34,6 +40,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ce12284-f647-4435-a8a4-48aeb83d4c14",
+   "metadata": {},
+   "source": [
+    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using the Exasol SQLAlchemy driver."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad4e5e2-5674-470f-ac6c-d07885ad2b33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ../utils/jupysql_init.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2d088386-edc1-4ddf-a89d-9b329cf54488",
    "metadata": {},
    "source": [
@@ -43,22 +67,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9a01990-79a8-4528-9c21-7b8d3c3f5447",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from exasol.nb_connector.connections import open_pyexasol_connection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
    "id": "d50e1a26-3fc0-47a1-a56a-9ded22e144ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = f\"\"\"\n",
-    "CREATE OR REPLACE TABLE \"{ai_lab_config.db_schema}\".\"US_FLIGHTS\" (\n",
+    "%%sql\n",
+    "CREATE OR REPLACE TABLE US_FLIGHTS (\n",
     "        FL_DATE DATE,\n",
     "        OP_CARRIER_AIRLINE_ID DECIMAL(10, 0),\n",
     "        ORIGIN_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
@@ -80,29 +94,21 @@
     "        NAS_DELAY DECIMAL(6, 2),\n",
     "        SECURITY_DELAY DECIMAL(6, 2),\n",
     "        LATE_AIRCRAFT_DELAY DECIMAL(6, 2)\n",
-    ");\n",
-    "\"\"\"\n",
-    "\n",
-    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    conn.execute(query=sql)"
+    ");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "3018f314-3046-4460-94cc-3985e6a7500a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = f\"\"\"\n",
-    "CREATE OR REPLACE TABLE \"{ai_lab_config.db_schema}\".\"US_AIRLINES\" (\n",
+    "%%sql\n",
+    "CREATE OR REPLACE TABLE US_AIRLINES (\n",
     "        OP_CARRIER_AIRLINE_ID DECIMAL(10, 0) IDENTITY PRIMARY KEY,\n",
     "        CARRIER_NAME VARCHAR(1000)\n",
-    ");\n",
-    "\"\"\"\n",
-    "\n",
-    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    conn.execute(query=sql)"
+    ");"
    ]
   },
   {
@@ -141,29 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "35ce66da-4c13-4af4-8bcf-6cdcfc377b36",
    "metadata": {
     "tags": [
      "data_selection"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7161497c479a47bba20ba738966c845c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(Box(children=(Label(value='Data Periods', layout=Layout(border_bottom='solid 1px', border_left='…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(get_data_selection_ui(ai_lab_config))"
    ]
@@ -171,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c492ed4-4dfa-429f-b295-4f8a0de63ab0",
+   "id": "16b44e84-d811-4b10-a9a2-172ff6629e93",
    "metadata": {},
    "outputs": [],
    "source": []
