--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/utils/flight_utils.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/utils/flight_utils.ipynb
@@ -23,12 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Callable, List, Tuple\n",
-    "from tempfile import TemporaryFile\n",
-    "from contextlib import ExitStack\n",
+    "from typing import List\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
     "import io\n",
+    "from itertools import islice\n",
     "\n",
     "import ipywidgets as widgets\n",
     "import requests\n",
@@ -36,25 +35,26 @@
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
     "\n",
-    "def _transform_flight_row(row: str) -> str:\n",
+    "def _transform_flights(pipe, src) -> None:\n",
     "\n",
-    "    fields = row.split(',')\n",
-    "    fields[0] = datetime.strptime(fields[0], '%m/%d/%Y %I:%M:%S %p').strftime('%Y-%m-%d')\n",
-    "    for i in [10, 12]:\n",
-    "        fields[i] = 'False' if float(fields[i]) == 0. else 'True'\n",
-    "    return ','.join(fields)\n",
-    "\n",
-    "\n",
-    "def _transform_airline_row(row: str) -> str:\n",
-    "\n",
-    "    fields = row.split(',', maxsplit=1)\n",
-    "    al_name = fields[1].strip('\"').split(':')[0]\n",
-    "    fields[1] = f'\"{al_name}\"'\n",
-    "    return ','.join(fields) + '\\n'\n",
+    "    for row in islice(src, 1, None):\n",
+    "        fields = row.split(',')\n",
+    "        fields[0] = datetime.strptime(fields[0], '%m/%d/%Y %I:%M:%S %p').strftime('%Y-%m-%d')\n",
+    "        for i in [10, 12]:\n",
+    "            fields[i] = 'False' if float(fields[i]) == 0. else 'True'\n",
+    "        pipe.write(bytes(','.join(fields), encoding='utf-8'))\n",
     "\n",
     "\n",
-    "def _import_from_cloudfront(conf: Secrets, file_name: str, \n",
-    "                            transform: Callable[[str], str], table_name: str) -> None:\n",
+    "def _transform_airlines(pipe, src) -> None:\n",
+    "\n",
+    "    for row in islice(src, 1, None):\n",
+    "        fields = row.split(',', maxsplit=1)\n",
+    "        al_name = fields[1].strip('\"\\n').split(':')[0]\n",
+    "        fields[1] = f'\"{al_name}\"'\n",
+    "        pipe.write(bytes(','.join(fields) + '\\n', encoding='utf-8'))\n",
+    "\n",
+    "\n",
+    "def _import_from_cloudfront(conf: Secrets, file_name: str, transform, table_name: str) -> None:\n",
     "\n",
     "    # Read requested csv file from the cloudfront\n",
     "    response = requests.get(f'https://d1je7p5oh8pade.cloudfront.net/{file_name}')\n",
@@ -62,41 +62,21 @@
     "    content_stream = io.BytesIO(response.content)\n",
     "    f_src = io.TextIOWrapper(content_stream, encoding='utf-8')\n",
     "\n",
-    "    with ExitStack() as stack:\n",
-    "        f_tmp = stack.enter_context(TemporaryFile())\n",
-    "\n",
-    "        # Transform the source file\n",
-    "        line_count = 0\n",
-    "        while True:\n",
-    "            src_line = f_src.readline()\n",
-    "            if not src_line:\n",
-    "                break\n",
-    "            elif line_count > 0:\n",
-    "                tx_line = transform(src_line)\n",
-    "                f_tmp.write(bytes(tx_line, 'utf-8'))\n",
-    "            line_count += 1\n",
-    "        f_tmp.seek(0)\n",
-    "\n",
-    "        # Import the transformed file\n",
-    "        pyexasol_conn = stack.enter_context(open_pyexasol_connection(\n",
-    "            conf, schema=conf.db_schema, compression=True))\n",
-    "        import_params = {\n",
-    "            'ROW SEPARATOR': 'LF',\n",
-    "            'COLUMN SEPARATOR': ','\n",
-    "        }\n",
-    "        pyexasol_conn.import_from_file(f_tmp, table=table_name, import_params=import_params)\n",
+    "    # Pre-process and import the data\n",
+    "    with open_pyexasol_connection(conf, schema=conf.db_schema, compression=True) as pyexasol_conn:\n",
+    "        pyexasol_conn.import_from_callback(transform, f_src, table=table_name)\n",
     "\n",
     "\n",
     "def load_flights_data(conf: Secrets, months: List[str]) -> None:\n",
     "\n",
     "    for mon in months:\n",
     "        file_name = f'US_FLIGHTS_{mon.replace(\" \", \"_\").upper()}.csv'\n",
-    "        _import_from_cloudfront(conf, file_name, _transform_flight_row, 'US_FLIGHTS')\n",
+    "        _import_from_cloudfront(conf, file_name, _transform_flights, 'US_FLIGHTS')\n",
     "\n",
     "\n",
     "def load_airlines_data(conf: Secrets) -> None:\n",
     "\n",
-    "    _import_from_cloudfront(conf, 'US_AIRLINES.csv', _transform_airline_row, 'US_AIRLINES')\n",
+    "    _import_from_cloudfront(conf, 'US_AIRLINES.csv', _transform_airlines, 'US_AIRLINES')\n",
     "\n",
     "\n",
     "def get_data_selection_ui(conf: Secrets) -> widgets.Widget:\n",
