Added a check for SaaS backend.

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -61,6 +61,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b81b0103-1014-4bc9-8724-0c0bafa83a23",
+   "metadata": {},
+   "source": [
+    "### Check that we don't have a SaaS backend configured"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "95d1e0e1-e334-4154-91cd-765d78868eaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.nb_connector.ai_lab_config import StorageBackend\n",
+    "if ai_lab_config.get(AILabConfig.storage_backend, ) == StorageBackend.saas.name:\n",
+    "    popup_message(f\"This tutorial will not work correctly with a SaaS as backend. You can export the Script-Languages-Container to a local file, but the upload to the database will fail.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "395d6f4f-6e06-45e3-a9a7-54dc94e73332",
    "metadata": {},
    "source": [
