Fixes from Chunki's review.

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -13,7 +13,7 @@
    "id": "c1dc4885-42ca-47d6-800c-302b6cfc91d1",
    "metadata": {},
    "source": [
-    "This notebooks explains some details and background regarding `exaslct`. This is especially useful when:\n",
+    "This notebooks explains some details and background regarding the tool `exaslct`. This is especially useful when:\n",
     "- you encounter a problem when running one of the other notebooks in this tutorial.\n",
     "- you need to clean up disk space.\n",
     "- you want to do more modifications to the script-languages-container than just adding a Python package."
@@ -46,8 +46,8 @@
    "source": [
     "### Instantiate SLCT Manager\n",
     "\n",
-    "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. \n",
-    "This class has some utility functions which simplifies the use of the exaslct API."
+    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
    ]
   },
   {
@@ -105,10 +105,10 @@
    "source": [
     "## What to do if something doesn't work?\n",
     "\n",
-    "During the build, export or upload it can happen that external package repositories are not available or something is wrong on your machine where you run the build. For these cases, exaslct stores information in many logs that can help to identify the problem.\n",
+    "During the build, export or upload it can happen that external package repositories are not available or something is wrong on your machine running the build. For these cases, `exaslct` provides extensive log files that can help analyzing such problems.\n",
     "\n",
     "#### Exaslsct Log\n",
-    "The main log for exaslct is stored directly as main.log in the build output of the job. With the following command you can find the main logs for all previous executions."
+    "The main log file for `exaslct` is stored as file `main.log` in the build output of the job. With the following command you can find the main logs for all previous executions."
    ]
   },
   {
@@ -127,7 +127,7 @@
    "id": "ce4be726-86ad-487c-9d76-705c360b825e",
    "metadata": {},
    "source": [
-    "The following command showd the log file from the last execution."
+    "The following command shows the log file of the last execution."
    ]
   },
   {
@@ -147,7 +147,7 @@
    "source": [
     "#### Build Output Directory\n",
     "\n",
-    "More detailed information about the build or other operations can be found in the `.build_output/jobs/*/outputs` directory. Here each run of `exaslct` creates its own directory under `.build_output/jobs`. The outputs directory stores the outputs and log files (if any) that each executed task of `exaslct` produces. Especially, the Docker tasks such as build, pull and push store the logs returned by the Docker API. This can be helpful for finding problems during the build."
+    "More detailed information about the build or other operations can be found in directory `.build_output/jobs/*/outputs`. Here each run of `exaslct` creates its own subdirectory under `.build_output/jobs`. Directory `outputs`  contains the outputs and log files (if any) produced by each of the executed tasks of `exaslct`. Especially, the Docker tasks such as build, pull and push store the logs returned by the Docker API. This can be helpful for analyzing problems during the build."
    ]
   },
   {
@@ -170,12 +170,17 @@
     "## Flavor Definition\n",
     "The following diagram shows a high level overview of the build steps for a script languages container.\n",
     "\n",
+    "Building an SLC usually starts with selecting one of the default build templates provided by Exsol.\n",
+    "These templates are called _flavors_. In this tutorial we customize the template Python flavor by adding new pip packages.\n",
+    "\n",
     "\n",
     "![image.png](slc_main_build_steps.svg)\n",
     "\n",
     "\n",
     "\n",
-    "For customizing a flavor usually the `flavor_customization` build step is most important. It contains everything you need to add dependencies. Changing the other build steps is required only in rare cases. Caution is needed when doing so. A typical use case is when dependencies are defined in other build steps because the script client depends on these dependencies.\n",
+    "\n",
+    "\n",
+    "The easiest way to customize a flavor is to add dependencies in the build step `flavor_customization`. Other build steps should only be changed with caution and is only required in special cases, e.g. when dependencies are defined in other build steps because the script client depends on these dependencies.\n",
     "Check the directory structure of the selected flavor:\n"
    ]
   },
@@ -204,8 +209,8 @@
    "source": [
     "## Build Cache\n",
     "\n",
-    "`exaslct` uses internally a build cache in order to accelerate the build by re-using docker images, which were build during a previous execution.\n",
-    "This means, your old container doesn't get lost, because when you change a flavor your container gets a new hash code. If you revert your changes the system automatically uses the existing cached container. Below you can see the content of the cache directory for the containers."
+    "`exaslct` internally uses a build cache in order to accelerate the build by re-using docker images, which were built during a previous execution.\n",
+    "Customizing a flavor always creates a separate entry in the cache with a unique hashcode and old containers don't get lost. If you revert your changes the system automatically uses the existing cached container. Below you can see the content of the cache directory for the containers."
    ]
   },
   {
@@ -241,7 +246,7 @@
    "id": "b946027b-dfce-472c-bfd4-1f828b29011e",
    "metadata": {},
    "source": [
-    "The `exasol/script-language-container:template-Exasol-all-python-3.10-release_...` image is the final release image for the script-language-container, the other (intermediate) images are used for the caching mechnism."
+    "Image `exasol/script-language-container:template-Exasol-all-python-3.10-release_...` is the final release image for the script-language-container, the other (intermediate) images are used for the caching mechnism."
    ]
   },
   {
