--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -86,7 +86,8 @@
    "source": [
     "### Instantiate SLCT Manager\n",
     "\n",
-    "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. This class has some utility functions which simplifies the use of the exaslct API."
+    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
    ]
   },
   {
@@ -125,7 +126,7 @@
    "metadata": {},
    "source": [
     "### Use existing script-languages-repository\n",
-    "If chose to use an existing script-languages-repository path you simply select the path."
+    "If you chose to use an existing script-languages-repository, then simply select the path."
    ]
   },
   {
@@ -144,7 +145,7 @@
    "metadata": {},
    "source": [
     "### Clone the Script-Languages-Release repository\n",
-    "If you want to use the Exasol script-languages-repository we need first to choose the root path where the repository should be stored."
+    "If you chose to clone the Exasol script-languages-repository, then first select the root path where the repository should be stored."
    ]
   },
   {
