--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -38,8 +38,8 @@
    "source": [
     "### Instantiate SLCT Manager\n",
     "\n",
-    "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. \n",
-    "This class has some utility functions which simplifies the use of the exaslct API."
+    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
    ]
   },
   {
@@ -80,7 +80,7 @@
    "source": [
     "## Customize\n",
     "\n",
-    "First you need to define an alias for the new script-languages-container. The alias will be used to reference the container later from the UDF's.\n",
+    "First you need to define an alias for the new SLC. The alias will be used to reference the container later from the UDFs.\n",
     "\n",
     "Note: In this tutorial the alias also will be used as part of the export file (tar.gz) and the uploaded container to the BucketFS. This allows you to create, upload and use different script-language-containers: one per alias."
    ]
@@ -104,7 +104,7 @@
     "\n",
     "`exasclt` consists of multiple build steps. By a build step here we mean a file structure which serves as an input for a certain stage of the building process of the script-languages-container. See [Advanced Topics](./advanced.ipynb) for more details.\n",
     "\n",
-    "The **flavor_customization** build step consists of a Dockerfile and several package lists which can be modified. We recommend to use the package lists to add new packages to the flavor and only modify the Dockerfile if you need very specific changes, like adding additional resources."
+    "Build step **flavor_customization** is defined by a Dockerfile and several package lists. We recommend to add new packages to the package lists and only modify the Dockerfile if you need very specific changes, like adding additional resources."
    ]
   },
   {
@@ -122,7 +122,7 @@
    "id": "8b0f6884-8fda-44d1-92a4-ae23040b109c",
    "metadata": {},
    "source": [
-    "The Dockerfile consists of two parts. The first part installs the packages from the package list and should only be changed with care. The second part is free for your changes. Read the description in the Dockerfile carefully to find out what you can and shouldn't do."
+    "The Dockerfile consists of two parts. The first part installs the packages from the package lists and should only be changed with care. The second part is free for your changes. Read the description in the Dockerfile carefully to find out what you can and shouldn't do."
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "source": [
     "#### Package Lists\n",
-    "The package lists have a unified format. Each line consists of the package name and the package version separated by \"|\", e.g `xgboost|1.3.3`. You can comment out a whole line by adding\"#\" at the beginning. You can also add a trailing comment to a package definition by adding a \"#\" after the package definition. We usually recommend to install a specific package version, such that there are no surprises for which version gets installed."
+    "The package lists have a unified format. Each line consists of the package name and the package version separated by the pipe character `|`, e.g `xgboost|1.3.3`. You can comment out a whole line by adding a hash character `#` the beginning of the line. You can also add a trailing comment to a package definition by adding `#` after the package definition. We usually recommend to install a specific package version to avoid surprises about which version actually gets installed."
    ]
   },
   {
@@ -149,7 +149,7 @@
    "id": "be4ac7a0-b7de-4168-b177-9b728f4d9a30",
    "metadata": {},
    "source": [
-    "We are now going to append the \"xgboost\" Python package to one of the package lists by adding `xgboost|2.0.3` and `scikit-learn|1.5.0` to the `flavor_customization/packages/python3_pip_packages` file. \n",
+    "We are now going to append Python package \"xgboost\" to one of the package lists by adding `xgboost|2.0.3` and `scikit-learn|1.5.0` to file `flavor_customization/packages/python3_pip_packages`. \n",
     "Notes:\n",
     " - running the following command multiple times will iteratively append the packages\n",
     " - you can also click on the link and modify the file directly"
@@ -258,9 +258,9 @@
    "id": "8797d3e3-a43e-4250-a5f0-50fb04aa1514",
    "metadata": {},
    "source": [
-    "The syntax of the activation statement is: `alias=url`. The activation key will be used in the `ALTER_SESSION` or `ALTER_SYSTEM` commands to \"register\" the script-language-container for usage in the UDF's.\n",
+    "The syntax of the activation statement is: `alias=url`. The activation key will be used in the `ALTER_SESSION` or `ALTER_SYSTEM` commands to \"register\" the script-language-container for usage in the UDFs.\n",
     "\n",
-    "You could get the activation SLQ command on the command line with `exaslct` by running:\n",
+    "You can generate the SQL commands for the activation with the following command line:\n",
     "```\n",
     "cd <slc_dir>\n",
     "./exaslct generate-language-activation --flavor-path flavors/<flavor_path> --bucketfs-name <bucketfs_name> --bucket-name <bucket_name> --container-name <container_name> --path-in-bucket <path_in_bucket>\n",
