--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# Export the flavor as is\n",
     "\n",
-    "In this tutorial you will learn how to build the script-languages-container from the base flavor (without any modifiction) and write the result to a tar gz file. The base flavor `template-Exasol-all-python-3.10` is part of the Script-Languages Release repository and it's purpose is to be the base for customer modifications which aim to use Python UDF's with Python packages which are not included in the Standard Container of the Exasol database.\n",
+    "Exasol [User Defined Functions](https://docs.exasol.com/db/latest/database_concepts/udf_scripts.htm) (UDFs) enable embedding user code into SQL statements. Each Python UDF runs in a so-called [Script-Languages-Container](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm) (SLC). Exasol provides default SLCs with some preinstalled PYthon packages but also allows users to create their own SLCs, e.g. by adding additional dependencies.\n",
+    "\n",
+    "This tutorial shows how to build a Script-Languages-Container (SLC) from a base flavor (without any modification) and write the result to a tar gz file. The base flavor `template-Exasol-all-python-3.10` is part of the Script-Languages Release repository.\n",
+    "\n",
     "`exaslct` uses the flavor description to build a Docker image which is called the `release` image. `exaslct` can export the content of this Docker image then to a tar gz file.\n",
     "\n"
    ]
@@ -39,8 +42,8 @@
    "source": [
     "### Instantiate SLCT Manager\n",
     "\n",
-    "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. \n",
-    "This class has some utility functions which simplifies the use of the exaslct API."
+    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
    ]
   },
   {
@@ -59,7 +62,7 @@
    "id": "31029b4f-df19-464b-91c7-2981dee02d12",
    "metadata": {},
    "source": [
-    "### Import some utility functions\n"
+    "### Import Some utility functions\n"
    ]
   },
   {
