--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "This notebooks shows how to:\n",
     "- activate the new script-languages-container in the Exasol database\n",
-    "- create UDF's for the new script-languages-container\n",
-    "- run those UDF's"
+    "- create UDFs for the new script-languages-container\n",
+    "- run those UDFs"
    ]
   },
   {
@@ -40,8 +40,8 @@
    "source": [
     "### Instantiate SLCT Manager\n",
     "\n",
-    "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. \n",
-    "This class has some utility functions which simplifies the use of the exaslct API."
+    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
    ]
   },
   {
