#19: move slc notebook to repo ai lab (#300)
fixes #19

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
@@ -40,6 +40,7 @@
     "1. [SageMaker extension](sagemaker/sme_introduction.ipynb)\n",
     "1. [Transformers extension](transformers/te_introduction.ipynb)\n",
     "1. [Cloud store](cloud/01_import_data.ipynb)\n",
+    "1. [Script Languages Container](script_languages_container/using_the_script_languages_container_tool.ipynb)\n",
     "\n"
    ]
   }
@@ -60,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
