Fixed notebook json

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
@@ -23,36 +23,7 @@
    "execution_count": 23,
    "id": "d86ca808-044e-4fbd-be30-5ba8324f501e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20a8ba8e6ff34e9ebe5f9f452191da56",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e99e294d01244d68fb6e66812674c7b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
@@ -98,7 +69,7 @@
     "    print(f\"AI-Lab scikit-learn version {my_version} is identical to that of the SLC.\\nNothing to do.\")\n",
     "else:\n",
     "    print(f\"AI-Lab scikit-learn version {my_version} differs from SLC.\\nInstalling version {slc_version} ...\")\n",
-    "    %pip install \"scikit_learn=={slc_version}\"\n",
+    "    %pip install \"scikit_learn=={slc_version}\"\n"
    ]
   },
   {
