Updated notebook sklearn_fix_version.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d86ca808-044e-4fbd-be30-5ba8324f501e",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "fa6c628f-853e-4850-8bab-46f7f645856e",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
     "    print(f\"AI-Lab scikit-learn version {my_version} is identical to that of the SLC.\\nNothing to do.\")\n",
     "else:\n",
     "    print(f\"AI-Lab scikit-learn version {my_version} differs from SLC.\\nInstalling version {slc_version} ...\")\n",
-    "    %pip install \"scikit_learn=={slc_version}\"\n"
+    "    %pip install \"scikit_learn=={slc_version}\""
    ]
   },
   {
